# oxideav-ac3

./: CHANGELOG.md  Cargo.toml  README.md
src/: audblk.rs  bsi.rs  decoder.rs  downmix.rs  imdct.rs  mdct.rs
src/eac3/: audfrm.rs  bsi.rs  chanmap.rs  decoder.rs  dsp.rs  ecpl.rs  mod.rs
tests/: downmix_51.rs  eac3_ffmpeg.rs
