[package]
name = "oxideav-ac3"
version = "0.0.7"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-ac3"
authors = ["Mark Karpeles"]
description = "Pure-Rust AC-3 (Dolby Digital) audio decoder"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-ac3"
keywords = ["multimedia", "audio", "ac3", "dolby", "codec"]
categories = ["multimedia::encoding", "multimedia::audio"]

[dependencies]
oxideav-core = "0.1"
